--- a/Max_Verstappen.html
+++ b/Max_Verstappen.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Max Verstappen</title>
-    <link rel="stylesheet" href="style/opmaakvoor.css">
+    <link rel="stylesheet" href="opmaakvoor.css">
   </head>
   <body>
     <p>
