--- a/quiz.html
+++ b/quiz.html
@@ -16,7 +16,7 @@
          <td><a href="geschiedenis.html">Geschiedenis</a></td>
          <td><a href="Max_Verstappen.html">Max Verstappen</a></td>
          <td><a href="quiz.html"><b>Quizz</b></a></td>
-         <td><a href="contact.html"><b>Contact</b></a></td>
+         <td><a href="contact.html">Contact</a></td>
        </tr>
     </table>
       <h1>Quizz</h1>
